--- a/index.html
+++ b/index.html
@@ -14,8 +14,30 @@
 
 </head>
 <body>
-    
-
+    <header class="header">
+        <nav class="navbar navbar-expand-lg">
+            <div class="container">
+                <div class="logo-brand">
+                    <div class="row">
+                        <a href="#" class="navbar-brand">
+                            <img src="../Flaby (bootstrap)/img/logo-white.png" alt="LOGOTYPE">
+                        </a>
+                    </div>
+                </div>
+                <div class="nav-menu">
+                    <div class="row">
+                        <ul class="navbar-nav">
+                            <li class="nav-item"><a href="#" class="nav-link">home</a></li>
+                            <li class="nav-item"><a href="#" class="nav-link">service</a></li>
+                            <li class="nav-item"><a href="#" class="nav-link">portfolio</a></li>
+                            <li class="nav-item"><a href="#" class="nav-link">blog</a></li>
+                            <li class="nav-item"><a href="#" class="nav-link">contact us</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </nav>
+    </header>
     <!--Bootstrap start JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
     <!--Bootstrap end JS-->
