--- a/index.html
+++ b/index.html
@@ -4,36 +4,39 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Flaby</title>
+
+    <!--Styles-->
+    <link rel="stylesheet" href="./css/style.css">
     <!--Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 
     <!--Add Fonts-->
     <link rel="stylesheet" href="https://use.typekit.net/tte8omq.css">                                                                    <!--Roboto Slab-->
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100;200;300;400;500;600;700;800&display=swap" rel="stylesheet"> <!--Raleway Font-->
-    <link rel="preload" href="/font/Museo_Slab_500.otf" as="font">                                                                        <!--Предзагрузка шрифта-->
+    <link rel="preload" href="/font/Museo_Slab_500.otf" as="font">                                                                      <!--Предзагрузка шрифта-->
 
 </head>
-<body>
-    <header class="header">
-        <nav class="navbar navbar-expand-lg">
+<body class="p-3 m-0 border-0 bd-example">
+    <header class="header container">
+        <nav class="navbar navbar-expand-lg nav-head">
             <div class="container">
-                <div class="logo-brand">
-                    <div class="row">
-                        <a href="#" class="navbar-brand">
-                            <img src="../Flaby (bootstrap)/img/logo-white.png" alt="LOGOTYPE">
-                        </a>
-                    </div>
+                <div>
+                    <a href="#" class="navbar-brand">
+                        <img src="./img/logo-white.png" alt="">
+                    </a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
                 </div>
-                <div class="nav-menu">
-                    <div class="row">
-                        <ul class="navbar-nav">
-                            <li class="nav-item"><a href="#" class="nav-link">home</a></li>
-                            <li class="nav-item"><a href="#" class="nav-link">service</a></li>
-                            <li class="nav-item"><a href="#" class="nav-link">portfolio</a></li>
-                            <li class="nav-item"><a href="#" class="nav-link">blog</a></li>
-                            <li class="nav-item"><a href="#" class="nav-link">contact us</a></li>
-                        </ul>
-                    </div>
+                <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+                    <ul class="navbar-nav">
+                        <li class="nav-item"><a href="#" class="nav-link">home</a></li>
+                        <li class="nav-item"><a href="#" class="nav-link">service</a></li>
+                        <li class="nav-item"><a href="#" class="nav-link">portfolio</a></li>
+                        <li class="nav-item"><a href="#" class="nav-link">blog</a></li>
+                        <li class="nav-item"><a href="#" class="nav-link">contact us</a></li>
+                        <a class="ms-3" href="#"><input class="btn btn-primary login" type="submit" value="login"></a>
+                    </ul>
                 </div>
             </div>
         </nav>
