--- a/index.html
+++ b/index.html
@@ -19,27 +19,26 @@
 <body class="p-3 m-0 border-0 bd-example">
     <header class="header container">
         <nav class="navbar navbar-expand-lg nav-head">
-            <div class="container">
-                <div>
-                    <a href="#" class="navbar-brand">
-                        <img src="./img/logo-white.png" alt="">
-                    </a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                </div>
-                <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+            <div class="container-fluid">
+                <a href="#" class="navbar-brand">
+                    <img src="./img/logo-white.png" alt="">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse justify-content-end nav-list" id="navbarSupportedContent">
                     <ul class="navbar-nav">
                         <li class="nav-item"><a href="#" class="nav-link">home</a></li>
                         <li class="nav-item"><a href="#" class="nav-link">service</a></li>
                         <li class="nav-item"><a href="#" class="nav-link">portfolio</a></li>
                         <li class="nav-item"><a href="#" class="nav-link">blog</a></li>
                         <li class="nav-item"><a href="#" class="nav-link">contact us</a></li>
-                        <a class="ms-3" href="#"><input class="btn btn-primary login" type="submit" value="login"></a>
+                        <a class="ms-lg-3" href="#"><input class="btn btn-primary login" type="submit" value="login"></a>
                     </ul>
                 </div>
             </div>
         </nav>
+        <div class="underline-header w-100 mt-lg-3"></div>
     </header>
     <!--Bootstrap start JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
