Добавлена секция -наш сервис-

--- a/index.html
+++ b/index.html
@@ -16,30 +16,77 @@
     <link rel="preload" href="/font/Museo_Slab_500.otf" as="font">                                                                      <!--Предзагрузка шрифта-->
 
 </head>
-<body class="p-3 m-0 border-0 bd-example">
-    <header class="header container">
-        <nav class="navbar navbar-expand-lg nav-head">
-            <div class="container-fluid">
-                <a href="#" class="navbar-brand">
-                    <img src="./img/logo-white.png" alt="">
-                </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse justify-content-end nav-list" id="navbarSupportedContent">
-                    <ul class="navbar-nav">
-                        <li class="nav-item"><a href="#" class="nav-link">home</a></li>
-                        <li class="nav-item"><a href="#" class="nav-link">service</a></li>
-                        <li class="nav-item"><a href="#" class="nav-link">portfolio</a></li>
-                        <li class="nav-item"><a href="#" class="nav-link">blog</a></li>
-                        <li class="nav-item"><a href="#" class="nav-link">contact us</a></li>
-                        <a class="ms-lg-3" href="#"><input class="btn btn-primary login" type="submit" value="login"></a>
-                    </ul>
+<body class="">
+    <header class="header w-100">
+        <div class="container">
+            <nav class="navbar navbar-expand-lg nav-head">
+                <div class="container-fluid">
+                    <a href="#" class="navbar-brand">
+                        <img src="./img/logo-white.png" alt="">
+                    </a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse justify-content-end nav-list" id="navbarSupportedContent">
+                        <ul class="navbar-nav">
+                            <li class="nav-item"><a href="#" class="nav-link">home</a></li>
+                            <li class="nav-item"><a href="#" class="nav-link">service</a></li>
+                            <li class="nav-item"><a href="#" class="nav-link">portfolio</a></li>
+                            <li class="nav-item"><a href="#" class="nav-link">blog</a></li>
+                            <li class="nav-item"><a href="#" class="nav-link">contact us</a></li>
+                            <a class="ms-lg-3" href="#"><input class="btn btn-primary login" type="submit" value="login"></a>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+            <div class="underline-header w-100 mt-lg-3"></div>
+            <div class="row">
+                <div class="container d-flex flex-row">
+                    <div class="info-link-header col-6">
+                        <h1>flat + free = flaby</h1>
+                        <p>A Modern Flat design corporate template for free download with all great features and trendy look.</p>
+                        <a class="btn btn-primary" href="#" role="button">Google Store</a>
+                        <a class="btn btn-primary" href="#" role="button">Learn More</a>
+                    </div>
+                    <div class="image-telephone-header col-6">
+                        <img src="./img/mobile-header.png" alt="mobile">
+                    </div>
                 </div>
             </div>
-        </nav>
-        <div class="underline-header w-100 mt-lg-3"></div>
+        </div>
     </header>
+    <main class="main">
+        <section class="our-service container">
+            <div class="first-title">
+                <span class="upper-text">Welcome to</span>
+                <h3 class="name-title">our service</h3>
+                <div class="underline-title"></div>
+            </div>
+            <ul class="list-our-service">
+                <li class="list__item">
+                    <img src="./img/ico/our service/web.png" alt="web ico">
+                    <p class="name-service">web development</p>
+                    <sub class="descrp-service">There are many variations of passages of Lorem Ipsum available,  the majorityalteration make difficult</sub>
+                </li>
+                <li class="list__item">
+                    <img src="./img/ico/our service/photo.png" alt="photo ico">
+                    <p class="name-service">Photography</p>
+                    <sub class="descrp-service">There are many variations of passages of Lorem Ipsum available,  the majorityalteration make difficult</sub>
+                </li>
+                <li class="list__item">
+                    <img src="./img/ico/our service/vector.png" alt="vector ico">
+                    <p class="name-service">vector artist</p>
+                    <sub class="descrp-service">There are many variations of passages of Lorem Ipsum available,  the majorityalteration make difficult</sub>
+                </li>
+            </ul>
+        </section>
+        <section class="Customization">
+            <div class="img-ipad-and-iphone">
+                <img src="./img/ipad.png" alt="ipad">
+                <img src="./img/iphone.png" alt="">
+            </div>
+        </section>
+    </main>
     <!--Bootstrap start JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
     <!--Bootstrap end JS-->
