добавление 4х секций в виде скелета

--- a/index.html
+++ b/index.html
@@ -81,10 +81,113 @@
             </ul>
         </section>
         <section class="Customization">
-            <div class="img-ipad-and-iphone">
+            <div class="img-ipad-iphone">
                 <img src="./img/ipad.png" alt="ipad">
                 <img src="./img/iphone.png" alt="">
             </div>
+            <div class="text-customization">
+                <div class="second-title">
+                    <span class="uptext">We have great features with</span>
+                    <p class="name-heading">Unlimited Customization Features</p>
+                    <sub class="subtext">There are many variations of passages of Lorem Ipsum available, the majorityalteration make difficult</sub>
+                </div>
+                <ul class="list-customization">
+                    <li class="list__item">More wordpress featrures with great responsive design.</li>
+                    <li class="list__item">Corporate flat design with necessary elements.</li>
+                    <li class="list__item">Free vector shape and mockup by great designer.</li>
+                    <li class="list__item">Full one page flat and modern trend following goods.</li>
+                </ul>
+                <button type="button" class="btn btn-secondary btn-lg">read more</button>
+            </div>
+        </section>
+        <section class="other-service">
+            <div class="first-title">
+                <span class="upper-text">view our latest</span>
+                <h3 class="name-title">other service</h3>
+                <div class="underline-title"></div>
+            </div>
+            <div class="list-other-service">
+                <ul class="list-other-service">
+                    <li class="list__item">
+                        <img src="./img/ico/other service/idea.png" alt="">
+                        <p class="name-service">idea developing</p>
+                        <sub class="desc-item">There are many variations of passages of Lorem Ipsum available, but the majorityalteration in some form with design</sub>
+                    </li>
+                    <li class="list__item">
+                        <img src="./img/ico/other service/code.png" alt="">
+                        <p class="name-service">best coding</p>
+                        <sub class="desc-item">There are many variations of passages of Lorem Ipsum available, but the majorityalteration in some form with design</sub>
+                    </li>
+                    <li class="list__item">
+                        <img src="./img/ico/other service/console.png" alt="">
+                        <p class="name-service">game design</p>
+                        <sub class="desc-item">There are many variations of passages of Lorem Ipsum available, but the majorityalteration in some form with design</sub>
+                    </li>
+                    <li class="list__item">
+                        <img src="./img/ico/other service/opposite-arrows.png" alt="">
+                        <p class="name-service">responsive design</p>
+                        <sub class="desc-item">There are many variations of passages of Lorem Ipsum available, but the majorityalteration in some form with design</sub>
+                    </li>
+                    <li class="list__item">
+                        <img src="./img/ico/other service/shopping-cart.png" alt="">
+                        <p class="name-service">free shoping</p>
+                        <sub class="desc-item">There are many variations of passages of Lorem Ipsum available, but the majorityalteration in some form with design</sub>
+                    </li>
+                    <li class="list__item">
+                        <img src="./img/ico/other service/free.png" alt="">
+                        <p class="name-service">bonus download</p>
+                        <sub class="desc-item">There are many variations of passages of Lorem Ipsum available, but the majorityalteration in some form with design</sub>
+                    </li>
+                </ul>
+            </div>
+        </section>
+        <section class="comments">
+            <div class="container">
+                <div class="first-title">
+                    <span class="upper-text">get know about</span>
+                    <h3 class="name-title">what customers say</h3>
+                    <div class="underline-title"></div>
+                </div>
+                <div class="slider-comments">
+                    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                        <div class="carousel-inner">
+                          <div class="carousel-item active">
+                            <img src="./img/ico/slider/man.png" class="d-block" alt="...">
+                            <p class="name-avatar">sourah b.</p>
+                            <sub class="job-title">co founded of mew</sub>
+                            <kbd class="comment-avatar">Great Team with great experience, i would reguler recommended to 
+                                all that you will get better support by working with this awesome team and their expert members :)
+                            </kbd>
+                          </div>
+                          <div class="carousel-item">
+                            <img src="./img/ico/slider/man-1.png" class="d-block" alt="...">
+                            <p class="name-avatar">sourah b.</p>
+                            <sub class="job-title">co founded of mew</sub>
+                            <kbd class="comment-avatar">Great Team with great experience, i would reguler recommended to 
+                                all that you will get better support by working with this awesome team and their expert members :)
+                            </kbd>
+                          </div>
+                          <div class="carousel-item">
+                            <img src="./img/ico/slider/woman.png" class="d-block" alt="...">
+                            <p class="name-avatar">sourah b.</p>
+                            <sub class="job-title">co founded of mew</sub>
+                            <kbd class="comment-avatar">Great Team with great experience, i would reguler recommended to 
+                                all that you will get better support by working with this awesome team and their expert members :)
+                            </kbd>
+                          </div>
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                          </button>
+                          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                          </button>
+                      </div>
+                </div>
+            </div>
+
         </section>
     </main>
     <!--Bootstrap start JS-->
