добавление прайс секции и не только

--- a/index.html
+++ b/index.html
@@ -187,7 +187,80 @@
                       </div>
                 </div>
             </div>
-
+        </section>
+        <section class="free-resource">
+            <div class="title-text-free_resource">
+                <div class="second-title">
+                    <span class="uptext">Feel free to download our</span>
+                    <p class="name-heading">Great Resourse for free</p>
+                    <sub class="subtext">There are many variations of passages of Lorem Ipsum available & majorityalteration</sub>
+                </div>
+                <div class="accordion" id="accordionExample">
+                    <div class="accordion-item">
+                        <p class="accordion-header" id="headingOne">
+                            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                opinion people
+                            </button>
+                        </p>
+                        <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+                                <p class="subtext scroll">
+                                    Contrary to popular belief, Lorem Ipsum is not simply random text.
+                                    It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, obscure Latin words, consectetur, from a Lorem Ipsum passage, 
+                                    and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" 
+                                    (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, 
+                                    "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.
+                                </p>
+                            </div>
+                          </div>
+                    </div>
+                </div>
+            </div>
+            <div class="image-free_resource">
+                <img src="./img/great-resourse-png.png" alt="">
+            </div>
+        </section>
+        <section class="pricing-plan">
+            <div class="container">
+                <div class="first-title">
+                    <span class="upper-text">get know about</span>
+                    <h3 class="name-title">what customers say</h3>
+                    <div class="underline-title"></div>
+                </div>
+                <ul class="list-price-plan">
+                    <li class="list__item">
+                        <div class="card">
+                            <img src="..." class="card-img-top" alt="...">
+                            <div class="card-body">
+                              <h5 class="card-title">Card title</h5>
+                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                              <a href="#" class="btn btn-primary">Go somewhere</a>
+                            </div>
+                          </div>
+                    </li>
+                    <li class="list__item center">
+                        <div class="card">
+                            <img src="..." class="card-img-top" alt="...">
+                            <div class="card-body">
+                              <h5 class="card-title">Card title</h5>
+                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                              <a href="#" class="btn btn-primary">Go somewhere</a>
+                            </div>
+                          </div>
+                    </li>
+                    <li class="list__item">
+                        <div class="card">
+                            <img src="..." class="card-img-top" alt="...">
+                            <div class="card-body">
+                              <h5 class="card-title">Card title</h5>
+                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                              <a href="#" class="btn btn-primary">Go somewhere</a>
+                            </div>
+                          </div>
+                    </li>
+                </ul>
+            </div>
+            
         </section>
     </main>
     <!--Bootstrap start JS-->
