--- a/index.html
+++ b/index.html
@@ -260,8 +260,22 @@
                     </li>
                 </ul>
             </div>
-            
         </section>
+        <section class="subscribe">
+            <div class="first-title">
+                <span class="upper-text">get know about</span>
+                <h3 class="name-title">what customers say</h3>
+                <div class="underline-title"></div>
+            </div>
+            <form action="">
+                <div class="mb-4">
+                    <input class="form-control" type="text" placeholder="name" aria-label="name">
+                    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+                </div>
+                <button type="submit" class="btn btn-primary mb-3">subscribe</button>
+            </form>
+        </section>
+        <section class="footer"></section>
     </main>
     <!--Bootstrap start JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
