--- a/index.html
+++ b/index.html
@@ -275,7 +275,57 @@
                 <button type="submit" class="btn btn-primary mb-3">subscribe</button>
             </form>
         </section>
-        <section class="footer"></section>
+        <div class="line-footer"></div>
+        <section class="footer d-flex flex-row">
+            <div class="not_use-link_social">
+                <img src="./img/logo-black.png" alt="">
+                <p class="not_use">
+                    Flaby is a free flat template and 
+                    available for free downloads
+                    but please don't use for sell
+                </p>
+                <div class="group-social_link">
+                    <img src="./img/ico/footer/facebook.png" alt="facebook">
+                    <img src="./img/ico/footer/google-plus.png" alt="google">
+                    <img src="./img/ico/footer/twitter.png" alt="twitter">
+                </div>
+            </div>
+            <div class="link d-flex flex-row">
+                <ul class="list-link">
+                    <span>useful link</span>
+                    <li class="link__item"><a href="">resourse</a></li>
+                    <li class="link__item"><a href="">downloads</a></li>
+                    <li class="link__item"><a href="">graphics</a></li>
+                    <li class="link__item"><a href="">template</a></li>
+                    <li class="link__item"><a href="">UI colors</a></li>
+                </ul>
+                <ul class="list-link">
+                    <span>free goods</span>
+                    <li class="link__item"><a href="">movies</a></li>
+                    <li class="link__item"><a href="">music</a></li>
+                    <li class="link__item"><a href="">videos</a></li>
+                    <li class="link__item"><a href="">games</a></li>
+                    <li class="link__item"><a href="">application</a></li>
+                </ul>
+                <ul class="list-link">
+                    <span>elements</span>
+                    <li class="link__item"><a href="">UI elements</a></li>
+                    <li class="link__item"><a href="">materials</a></li>
+                    <li class="link__item"><a href="">flat UI</a></li>
+                    <li class="link__item"><a href="">print file</a></li>
+                    <li class="link__item"><a href="">flyer</a></li>
+                </ul>
+                <ul class="list-link">
+                    <span>about us</span>
+                    <li class="link__item"><a href="">home</a></li>
+                    <li class="link__item"><a href="">portfolio</a></li>
+                    <li class="link__item"><a href="">layuot</a></li>
+                    <li class="link__item"><a href="">blog</a></li>
+                    <li class="link__item"><a href=""></a></li>
+                </ul>
+            </div>
+        </section>
+        <div class="line-footer"></div>
     </main>
     <!--Bootstrap start JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
