add general scss file

--- a/index.html
+++ b/index.html
@@ -293,35 +293,35 @@
             <div class="link d-flex flex-row">
                 <ul class="list-link">
                     <span>useful link</span>
-                    <li class="link__item"><a href="">resourse</a></li>
-                    <li class="link__item"><a href="">downloads</a></li>
-                    <li class="link__item"><a href="">graphics</a></li>
-                    <li class="link__item"><a href="">template</a></li>
-                    <li class="link__item"><a href="">UI colors</a></li>
+                    <li class="link__item"><a href="#">resourse</a></li>
+                    <li class="link__item"><a href="#">downloads</a></li>
+                    <li class="link__item"><a href="#">graphics</a></li>
+                    <li class="link__item"><a href="#">template</a></li>
+                    <li class="link__item"><a href="#">UI colors</a></li>
                 </ul>
                 <ul class="list-link">
                     <span>free goods</span>
-                    <li class="link__item"><a href="">movies</a></li>
-                    <li class="link__item"><a href="">music</a></li>
-                    <li class="link__item"><a href="">videos</a></li>
-                    <li class="link__item"><a href="">games</a></li>
-                    <li class="link__item"><a href="">application</a></li>
+                    <li class="link__item"><a href="#">movies</a></li>
+                    <li class="link__item"><a href="#">music</a></li>
+                    <li class="link__item"><a href="#">videos</a></li>
+                    <li class="link__item"><a href="#">games</a></li>
+                    <li class="link__item"><a href="#">application</a></li>
                 </ul>
                 <ul class="list-link">
                     <span>elements</span>
-                    <li class="link__item"><a href="">UI elements</a></li>
-                    <li class="link__item"><a href="">materials</a></li>
-                    <li class="link__item"><a href="">flat UI</a></li>
-                    <li class="link__item"><a href="">print file</a></li>
-                    <li class="link__item"><a href="">flyer</a></li>
+                    <li class="link__item"><a href="#">UI elements</a></li>
+                    <li class="link__item"><a href="#">materials</a></li>
+                    <li class="link__item"><a href="#">flat UI</a></li>
+                    <li class="link__item"><a href="#">print file</a></li>
+                    <li class="link__item"><a href="#">flyer</a></li>
                 </ul>
                 <ul class="list-link">
                     <span>about us</span>
-                    <li class="link__item"><a href="">home</a></li>
-                    <li class="link__item"><a href="">portfolio</a></li>
-                    <li class="link__item"><a href="">layuot</a></li>
-                    <li class="link__item"><a href="">blog</a></li>
-                    <li class="link__item"><a href=""></a></li>
+                    <li class="link__item"><a href="#">home</a></li>
+                    <li class="link__item"><a href="#">portfolio</a></li>
+                    <li class="link__item"><a href="#">layuot</a></li>
+                    <li class="link__item"><a href="#">blog</a></li>
+                    <li class="link__item"><a href="#">Contact Us</a></li>
                 </ul>
             </div>
         </section>
