--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
 
     <!--Styles-->
     <link rel="stylesheet" href="./css/style.css">
+
     <!--Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 
     <!--Add Fonts-->
     <link rel="stylesheet" href="https://use.typekit.net/tte8omq.css">                                                                    <!--Roboto Slab-->
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100;200;300;400;500;600;700;800&display=swap" rel="stylesheet"> <!--Raleway Font-->
-    <link rel="preload" href="/font/Museo_Slab_500.otf" as="font">                                                                      <!--Предзагрузка шрифта-->
+    <link rel="preload" href="/font/Museo_Slab_500.otf" as="font">                                                                        <!--Предзагрузка шрифта-->
 
 </head>
 <body class="">
@@ -57,7 +58,7 @@
     </header>
     <main class="main">
         <section class="our-service container">
-            <div class="first-title">
+            <div class="g-first-title">
                 <span class="upper-text">Welcome to</span>
                 <h3 class="name-title">our service</h3>
                 <div class="underline-title"></div>
@@ -86,7 +87,7 @@
                 <img src="./img/iphone.png" alt="">
             </div>
             <div class="text-customization">
-                <div class="second-title">
+                <div class="g-second-title">
                     <span class="uptext">We have great features with</span>
                     <p class="name-heading">Unlimited Customization Features</p>
                     <sub class="subtext">There are many variations of passages of Lorem Ipsum available, the majorityalteration make difficult</sub>
@@ -101,7 +102,7 @@
             </div>
         </section>
         <section class="other-service">
-            <div class="first-title">
+            <div class="g-first-title">
                 <span class="upper-text">view our latest</span>
                 <h3 class="name-title">other service</h3>
                 <div class="underline-title"></div>
@@ -143,7 +144,7 @@
         </section>
         <section class="comments">
             <div class="container">
-                <div class="first-title">
+                <div class="g-first-title">
                     <span class="upper-text">get know about</span>
                     <h3 class="name-title">what customers say</h3>
                     <div class="underline-title"></div>
@@ -190,7 +191,7 @@
         </section>
         <section class="free-resource">
             <div class="title-text-free_resource">
-                <div class="second-title">
+                <div class="g-second-title">
                     <span class="uptext">Feel free to download our</span>
                     <p class="name-heading">Great Resourse for free</p>
                     <sub class="subtext">There are many variations of passages of Lorem Ipsum available & majorityalteration</sub>
@@ -222,7 +223,7 @@
         </section>
         <section class="pricing-plan">
             <div class="container">
-                <div class="first-title">
+                <div class="g-first-title">
                     <span class="upper-text">get know about</span>
                     <h3 class="name-title">what customers say</h3>
                     <div class="underline-title"></div>
@@ -262,7 +263,7 @@
             </div>
         </section>
         <section class="subscribe">
-            <div class="first-title">
+            <div class="g-first-title">
                 <span class="upper-text">get know about</span>
                 <h3 class="name-title">what customers say</h3>
                 <div class="underline-title"></div>
@@ -275,7 +276,7 @@
                 <button type="submit" class="btn btn-primary mb-3">subscribe</button>
             </form>
         </section>
-        <div class="line-footer"></div>
+        <div class="g-line-footer"></div>
         <section class="footer d-flex flex-row">
             <div class="not_use-link_social">
                 <img src="./img/logo-black.png" alt="">
@@ -325,10 +326,17 @@
                 </ul>
             </div>
         </section>
-        <div class="line-footer"></div>
+        <div class="g-line-footer"></div>
+        <section class="under-footer">
+            <p><i class="fa-regular fa-copyright"></i><span>Copyright 2017</span>|<span>All rights reserved</span>|<span>Template Designed By <b>Sourabh Barua</b></span></p>
+        </section>
     </main>
+
     <!--Bootstrap start JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
     <!--Bootstrap end JS-->
+
+    <!--font-awesome-->
+    <script src="https://kit.fontawesome.com/761fa4baa1.js" crossorigin="anonymous"></script>
 </body>
 </html>
