--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     </div>
                 </div>
             </nav>
-            <div class="underline-header w-100 mt-lg-3"></div>
+            <div class="underline-header mt-lg-3"></div>
             <div class="row">
                 <div class="container d-flex flex-row">
                     <div class="info-link-header col-6">
