добавлен префикс 'bg-' для определения задних фонов

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="preload" href="/font/Museo_Slab_500.otf" as="font">                                                                        <!--Предзагрузка шрифта-->
 
 </head>
-<body class="">
+<body>
     <header class="header w-100">
         <div class="container">
             <nav class="navbar navbar-expand-lg nav-head">
@@ -35,7 +35,7 @@
                             <li class="nav-item"><a href="#" class="nav-link">portfolio</a></li>
                             <li class="nav-item"><a href="#" class="nav-link">blog</a></li>
                             <li class="nav-item"><a href="#" class="nav-link">contact us</a></li>
-                            <a class="ms-lg-3" href="#"><input class="btn btn-primary login" type="submit" value="login"></a>
+                            <a class="ms-lg-3 login" href="#">login</a> <!--110x55-->
                         </ul>
                     </div>
                 </div>
