--- a/index.html
+++ b/index.html
@@ -42,14 +42,16 @@
             </nav>
             <div class="underline-header mt-lg-3"></div>
             <div class="row">
-                <div class="container d-flex flex-row">
-                    <div class="info-link-header col-6">
+                <div class="d-flex contain-header">
+                    <div class="info-link-header col-7">
                         <h1>flat + free = flaby</h1>
-                        <p>A Modern Flat design corporate template for free download with all great features and trendy look.</p>
-                        <a class="btn btn-primary" href="#" role="button">Google Store</a>
-                        <a class="btn btn-primary" href="#" role="button">Learn More</a>
+                        <p>A Modern Flat design corporate template <br> for free download with all great features <br> and trendy look.</p>
+                        <div class="group-btn">
+                            <a class="btn-header google-btn" href="#" role="button">Google Store</a>
+                            <a class="btn-header learn-btn" href="#" role="button">Learn More</a>
+                        </div>
                     </div>
-                    <div class="image-telephone-header col-6">
+                    <div class="col-5 image-telephone-header">
                         <img src="./img/mobile-header.png" alt="mobile">
                     </div>
                 </div>
