section 'our-service' finally

--- a/index.html
+++ b/index.html
@@ -69,17 +69,17 @@
                 <li class="list__item">
                     <img src="./img/ico/our service/web.png" alt="web ico">
                     <p class="name-service">web development</p>
-                    <sub class="descrp-service">There are many variations of passages of Lorem Ipsum available,  the majorityalteration make difficult</sub>
+                    <sub class="descrp-service">There are many variations of passages of <br> Lorem Ipsum available,  the majorityalteration <br> make difficult</sub>
                 </li>
                 <li class="list__item">
                     <img src="./img/ico/our service/photo.png" alt="photo ico">
                     <p class="name-service">Photography</p>
-                    <sub class="descrp-service">There are many variations of passages of Lorem Ipsum available,  the majorityalteration make difficult</sub>
+                    <sub class="descrp-service">There are many variations of passages of <br> Lorem Ipsum available,  the majorityalteration <br> make difficult</sub>
                 </li>
                 <li class="list__item">
                     <img src="./img/ico/our service/vector.png" alt="vector ico">
                     <p class="name-service">vector artist</p>
-                    <sub class="descrp-service">There are many variations of passages of Lorem Ipsum available,  the majorityalteration make difficult</sub>
+                    <sub class="descrp-service">There are many variations of passages of <br> Lorem Ipsum available,  the majorityalteration <br> make difficult</sub>
                 </li>
             </ul>
         </section>
