section 'customization' finally

--- a/index.html
+++ b/index.html
@@ -83,16 +83,16 @@
                 </li>
             </ul>
         </section>
-        <section class="Customization">
-            <div class="img-ipad-iphone">
-                <img src="./img/ipad.png" alt="ipad">
-                <img src="./img/iphone.png" alt="">
+        <section class="Customization container">
+            <div class="img-ipad-iphone col-lg-5">
+                <img class="ipad" src="./img/ipad.png" alt="ipad">
+                <img class="iphone" src="./img/iphone.png" alt="iphone">
             </div>
-            <div class="text-customization">
+            <div class="text-customization col-lg-6">
                 <div class="g-second-title">
                     <span class="uptext">We have great features with</span>
                     <p class="name-heading">Unlimited Customization Features</p>
-                    <sub class="subtext">There are many variations of passages of Lorem Ipsum available, the majorityalteration make difficult</sub>
+                    <sub class="subtext">There are many variations of passages of Lorem Ipsum <br> available, the majorityalteration make difficult</sub>
                 </div>
                 <ul class="list-customization">
                     <li class="list__item">More wordpress featrures with great responsive design.</li>
@@ -100,7 +100,7 @@
                     <li class="list__item">Free vector shape and mockup by great designer.</li>
                     <li class="list__item">Full one page flat and modern trend following goods.</li>
                 </ul>
-                <button type="button" class="btn btn-secondary btn-lg">read more</button>
+                <a href="#" class="btn-cstm-section">read more</a>
             </div>
         </section>
         <section class="other-service">
