section 'other service' finally

--- a/index.html
+++ b/index.html
@@ -103,43 +103,55 @@
                 <a href="#" class="btn-cstm-section">read more</a>
             </div>
         </section>
-        <section class="other-service">
+        <section class="other-service container">
             <div class="g-first-title">
                 <span class="upper-text">view our latest</span>
                 <h3 class="name-title">other service</h3>
                 <div class="underline-title"></div>
             </div>
-            <div class="list-other-service">
+            <div class="div-other-service">
                 <ul class="list-other-service">
                     <li class="list__item">
                         <img src="./img/ico/other service/idea.png" alt="">
-                        <p class="name-service">idea developing</p>
-                        <sub class="desc-item">There are many variations of passages of Lorem Ipsum available, but the majorityalteration in some form with design</sub>
+                        <div>
+                            <p class="name-service">idea developing</p>
+                            <sub class="desc-item">There are many variations of passages <br> of Lorem Ipsum available, but the ma- <br> jorityalteration in some form with <br> design</sub>
+                        </div>
                     </li>
                     <li class="list__item">
                         <img src="./img/ico/other service/code.png" alt="">
-                        <p class="name-service">best coding</p>
-                        <sub class="desc-item">There are many variations of passages of Lorem Ipsum available, but the majorityalteration in some form with design</sub>
+                        <div>
+                            <p class="name-service">best coding</p>
+                            <sub class="desc-item">There are many variations of passages <br> of Lorem Ipsum available, but the ma- <br> jorityalteration in some form with <br> design</sub>
+                        </div>
                     </li>
                     <li class="list__item">
                         <img src="./img/ico/other service/console.png" alt="">
-                        <p class="name-service">game design</p>
-                        <sub class="desc-item">There are many variations of passages of Lorem Ipsum available, but the majorityalteration in some form with design</sub>
+                        <div>
+                            <p class="name-service">game design</p>
+                            <sub class="desc-item">There are many variations of passages <br> of Lorem Ipsum available, but the ma- <br> jorityalteration in some form with <br> design</sub>
+                        </div>
                     </li>
                     <li class="list__item">
                         <img src="./img/ico/other service/opposite-arrows.png" alt="">
-                        <p class="name-service">responsive design</p>
-                        <sub class="desc-item">There are many variations of passages of Lorem Ipsum available, but the majorityalteration in some form with design</sub>
+                        <div>
+                            <p class="name-service">responsive design</p>
+                            <sub class="desc-item">There are many variations of passages <br> of Lorem Ipsum available, but the ma- <br> jorityalteration in some form with <br> design</sub>
+                        </div>
                     </li>
                     <li class="list__item">
                         <img src="./img/ico/other service/shopping-cart.png" alt="">
-                        <p class="name-service">free shoping</p>
-                        <sub class="desc-item">There are many variations of passages of Lorem Ipsum available, but the majorityalteration in some form with design</sub>
+                        <div>
+                            <p class="name-service">free shoping</p>
+                            <sub class="desc-item">There are many variations of passages <br> of Lorem Ipsum available, but the ma- <br> jorityalteration in some form with <br> design</sub>
+                        </div>
                     </li>
-                    <li class="list__item">
+                    <li class="list__item ">
                         <img src="./img/ico/other service/free.png" alt="">
-                        <p class="name-service">bonus download</p>
-                        <sub class="desc-item">There are many variations of passages of Lorem Ipsum available, but the majorityalteration in some form with design</sub>
+                        <div>
+                            <p class="name-service">bonus download</p>
+                            <sub class="desc-item">There are many variations of passages <br> of Lorem Ipsum available, but the ma- <br> jorityalteration in some form with <br> design</sub>
+                        </div>
                     </li>
                 </ul>
             </div>
